--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "matter-js": "^0.14.2"
   },
   "scripts": {
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
     "watch": "parcel src/index.html"  
   }
 }
